--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".MainActivity">
 
         </activity>
+        <activity android:name=".DetallesEvento"></activity>
     </application>
 
 </manifest>
