--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
-
+    compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
