--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".Activitys.ActivityEvents" />
         <activity android:name=".Activitys.RecyclerViewNewsActivity" />
         <activity android:name=".Activitys.MapsActivity" />
+        <activity android:name=".Activitys.ActivityEventsDetails" android:theme="@style/Theme.AppCompat.Translucent"></activity>
         <activity
             android:name=".Activitys.PlaceDetails"
             android:label="@string/title_activity_place_details"
